--- a/ppms_project/profilingApp/templates/activities/Admin Home2.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home2.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block dashboard %}
 <!-- Dashboard -->
-<div id="grid" class="container-fluid" style="padding:7%; margin-top:0px;">
+<div id="grid" class="container-fluid" style="padding:8%; margin-top:50px;">
     <div class="container">
         <div class="container">
             <div class="row justify-content-between"> 
@@ -13,7 +13,7 @@
                 <br>
                 <div class="col">
                     <div class="card text-right" style="width: 10rem;">
-                        <div class="dropdown">
+                        <div class="dropdown text-center" >
                             <h6 class="text-uppercase text-muted dropdown-header">Barangay</h6>
                             <button class="btn dropdown-toggle" type="button"  data-bs-toggle="dropdown"><i class="fa fa-home" aria-hidden="true"></i>All</button>
                             <ul class="dropdown-menu" id="dropdown-menu">
