--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Profile.html
@@ -1,7 +1,7 @@
 {% extends 'activities/BHW Home.html' %} <!-- header and footer of page linked from bhw home html file -->
 {% load static %}
 {% block dashboard %}
-<div id="grid" class="container-fluid" style="padding:7%; margin-top:0px;">
+<div id="grid" class="container-fluid" style="padding:7%; margin-top:50px;">
     <div class="container-grid">
         <div class="row"> 
             <div class="col">
@@ -47,9 +47,13 @@
                             <td>1</td>
                             <td>1</td>
                             <td style="text-align: center;">
-                                <div>
-                                    <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">View Profile</button></a>
-                                    <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">Delete</button></a>
+                                <div class="row">
+                                    <div class="col">
+                                        <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">View Profile</button></a>
+                                    </div>
+                                    <div class="col">
+                                        <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">Delete</button></a>
+                                    </div>
                                 </div>
                             </td>
                         </tr>
@@ -66,9 +70,13 @@
                             <td>1</td>
                             <td>1</td>
                             <td style="text-align: center;">
-                                <div>
-                                    <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">View Profile</button></a>
-                                    <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">Delete</button></a>
+                                <div class="row">
+                                    <div class="col">
+                                        <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">View Profile</button></a>
+                                    </div>
+                                    <div class="col">
+                                        <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">Delete</button></a>
+                                    </div>
                                 </div>
                             </td>
                         </tr>
