--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
     <link rel="icon" href="{% static '/Media/logo.svg' %}" type="image/x-icon">
     <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
+    <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/y-icon">
 
-    <title>Home</title>
+    <title>City of Dasmariñas</title>
 </head>
 <body>
 <!-- Header -->
