--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -12,6 +12,7 @@
     <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
     <script src="{% static '/Javascript/js/fstdropdown.js' %}"></script>
     <link rel="stylesheet" href="{% static '/CSS/css/fstdropdown.css' %}">
+    <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/y-icon">
     <title>Preschoolers Profiling and Monitoring System</title>
 </head>
 <body>
