--- a/ppms_project/profilingApp/templates/activities/Unvalidated Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Unvalidated Profile.html
@@ -7,22 +7,21 @@
 
     <!-- table layout -->
     <link rel="stylesheet" href="{% static '/CSS/DataTables/datatables.min.css' %}">
-    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
     <script src="{% static '/Javascript/js/datatables.min.js' %}"></script>
     <script src="{% static '/Javascript/js/datatables.js' %}"></script>
-
+    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-    <title>Validate</title>
-
+    <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
-    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
-    <script src="{% static '/Javascript/js/Chart.min.js' %}" crossorigin="anonymous"></script>
+
+    <script src="{% static '/Javascript/js/Chart.min.js' %}" crossorigin="anonymous"></script>\
+
+    <title>{{ unva_bhw.user.first_name }} {{ unva_bhw.user.last_name }}</title>
 
         <!-- Header -->
     <div class="site-header" id="header">
@@ -47,18 +46,18 @@
 
 <body>
     <!-- Dashboard -->
-    <div id="grid" class="container-fluid" style="padding:7%; margin-top:0px;">
+    <div id="grid" class="container-fluid" style="padding:7%; margin-top:50px;">
         <div class="container-grid">
             <div class="">
                 <div class="row justify-content-between"> 
                     <div class="col-4">
                     </div>
-                    <div class="col-4">
+                    <div class="col-5">
                         <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
-                            <ol class="breadcrumb mb-0">
-                            <li class="breadcrumb-item"><a href="{% url 'admin_home' %}">Home</a></li>
-                            <li class="breadcrumb-item"><a href="{% url 'bhw_validation' %}">BHW Users</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">BHW Profile</li>
+                            <ol class="breadcrumb mb-0" style="justify-content:center" >
+                            <li class="breadcrumb-item" ><a href="{% url 'admin_home' %}"style="text-decoration:none; color:#188045"><i class="fa fa-fw fa-home"></i>Home</a></li>
+                            <li class="breadcrumb-item"><a href="{% url 'bhw_validation' %}" style="text-decoration:none;color:#188045"><i class="fa fa-fw fa-user-nurse"></i>BHW Users</a></li>
+                            <li class="breadcrumb-item active" aria-current="page"><i class="fa fa-fw fa-id-card"></i>BHW Profile</li>
                             </ol>
                         </nav>
                     </div>
@@ -122,6 +121,7 @@
         </div>
         <div class="text-center">
             <input type="submit" name="save_bhw" style="background-color: #188045; color: white;" class="btn" value="Save">
+            <a href=""><button type="button" style="background-color: #d80202; color: white; margin-left:1%" class="btn">Delete</button></a>
         </div>
         </form>
         <hr>
