--- a/ppms_project/profilingApp/templates/activities/Admin Delete Confirmation.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Delete Confirmation.html
@@ -38,22 +38,21 @@
     <!-- Dashboard -->
     <div id="grid" class="container-fluid">
         <div class="container-grid" style="padding: 5%;">
-            {% block content %}
+
             <!-- Spacing --> <br><br><br><br>
-            <h4 class="d-flex fas fa-clipboard-check justify-content-center"> Confirmation Message</h4>
+            <h4 class="d-flex fas fa-clipboard-check justify-content-center"> Delete Confirmation</h4>
             <hr style="background-color: white;">
-            <form action="{% url 'tupadmin_deletereqs' applicant.id %}" method="POST">
+            <form action="{% url 'delete_profile' bhw.user.id %}" method="POST">
                 {% csrf_token %}
-                <h5 class="modal-title" style="text-align:center;" id="modalLabel">Are you sure you want to delete <strong>{{applicant.user_appli.user.first_name}} {{applicant.user_appli.user.last_name}}</strong>?</h5><br>
+                <h5 class="modal-title" style="text-align:center;" id="modalLabel">Are you sure you want to delete <strong>{{ bhw.user.first_name }} {{ bhw.user.last_name }}</strong>?</h5><br>
 
                 <div class="d-flex justify-content-center">
                     <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Confirm" style="margin-right: 2%;">
-                    <a href="{% url 'tupadmin_applicantreqs' %}"><button type="button" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button></a>
+                    <a href="{% url 'bhw_validation' %}"><button type="button" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button></a>
                 </div>
             </form>
         </div>
     </div>
-    {% endblock %}
          
     </div>
     <!-- Footer -->
