--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -4,182 +4,211 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+    <!-- table layout -->
+    <link rel="stylesheet" href="{% static '/CSS/DataTables/datatables.min.css' %}">
+    <script src="{% static '/Javascript/js/datatables.min.js' %}"></script>
+    <script src="{% static '/Javascript/js/datatables.js' %}"></script>
+    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
-    <link rel="icon" href="{% static '/Media/logo.svg' %}" type="image/x-icon">
-    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
-    <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/y-icon">
 
-    <title>City of Dasmariñas</title>
-</head>
-<body>
-<!-- Header -->
-<div class="site-header" id="header">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled border-bottom" id="header">
-      <div class="container-fluid">
-        <div>
-          <a href="#" class="name" style="text-decoration: none;">
-              <img class="navbar-icon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
-              <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring</span>
-          </a>
-        </div>
-        <div class="dropdown">
-          <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px"><i class="fa fa-fw fa-user"></i>Parent</button>
-          <ul class="dropdown-menu" id="dropdown-menu">
-              <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
-          </ul>
-        </div>
+    <script src="{% static '/Javascript/js/Chart.min.js' %}" crossorigin="anonymous"></script>\
+
+    <title>{{ unva_bhw.user.first_name }} {{ unva_bhw.user.last_name }}</title>
+
+        <!-- Header -->
+    <div class="site-header" id="header">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled border-bottom" id="header">
+            <div class="container-fluid">
+                <div>
+                    <a href="#" class="name" style="text-decoration: none;">
+                        <img class="navbar-icon" style="margin-left:15px;" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
+                        <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas</span>
+                    </a>
+                </div>
+                <div class="dropdown">
+                    <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px"> <i class="fa fa-fw fa-user"></i>Admin</button>
+                    <ul class="dropdown-menu" id="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
-    </nav>
-  </div>
+</head>
 
-<!-- Dashboard -->
-    <div id="grid" class="container-fluid" style="padding:7%;">
-      <div class="container-fluid">
-        <div class="row"> 
-        <div class="col">
-            <h2 style="text-align:left;">My Preschoolers</h2>
+<body>
+    <div id="grid" class="container-fluid" style="padding:7%; margin: top 65px;">
+        <div class="container-grid">
+            <div class="">
+                <div class="row"> 
+                    <div class="col">
+                        <h3 style="text-align:left;">Preschooler List</h3>
+                    </div>
+                </div>
+            <hr>
+            <br>
+            </div>
         </div>
-        <div class="col">
-            <div class="row">
-                <div class="col">
-                    <button class="btn float-end" type="button" id= "parentHomeButton" data-bs-toggle="modal" data-bs-target="#addPreschooler"><i class="fa fa-fw fa-id-card"></i>Register New Preschooler</button>
+    <!-- DataTables -->
+    <div class="container text-black">
+        <div class="row">
+            <div class="col">
+                <div class="text-left" >
+                    <button style="margin-bottom: 15px; margin-right: 10px; background-color: #188045;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addSched"><span class="fa fa-calendar-alt"></span> Enroll Preschooler</button>
+                    <!-- <button style="margin-bottom: 15px;" type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#deleteApplicant"><span class="fa fa-user-minus"></span> Delete</button> -->
                 </div>
-                <!-- Modal Sign in -->
-    <div class="modal fade" id="addPreschooler" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header text-center">
-                    <h5 class="modal-title" id="exampleModalLabel">Register New Preschooler</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <form action="" method="POST">
-                    <div class="modal-body mx-4">
-
-                        <div class="form-group">
-                            <div class="row">
-                              <div class="col">
-                                <label for="firstname">First Name</label>
-                            <input type="text" id="firstname" name="firstname" placeholder="First Name" required="required"/>
-                              </div>
-                              <div class="col">
-                                <label for="lastname">Last Name</label>
-                            <input type="text" id="lastname" name="lastname" placeholder="Last Name" required="required"/>
-                              </div>
+                <div class="modal fade" id="addSched" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header" >
+                                <h5 class="modal-title fa fa-user-edit" id="exampleModalLabel">Enroll Preschooler</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
-                          </div>
-                          <div class="form-group">
-                            <label for="address">Address</label>
-                            <input type="text" id="address" name="address" placeholder="Enter Preschooler's Address" required="required"/>
-                          </div>
-                          <div class="form-group">
-                            <label for="password">Date of Birth:</label>
-                            <input type="password" id="password"  aria-describedby="passwordHelpBlock" placeholder="Enter Your Password"name="password" required="required"/>
-                            <!-- <small id="passwordHelpBlock"> Must be 8-20 Characters.</small> -->
-                          </div>
-                          <div class="form-group">
-                            <label for="cpassword">Confirm Password</label>
-                            <input type="password" id="cpassword" name="cpassword" placeholder="Confirm Your Password" required="required"/>
-                          </div>
-                        <br>
-                        <div class="text-center mb-3">
-                            <a style="color: white; text-decoration: none;"><button type="submit"   d-color: #168300; color: white;" class="btn btn-block z-depth-1a">Register</button></a>
-
+                            <div class="modal-body mx-4">
+                                <form method="POST">
+                                    <div class="md-form">
+                                        <label id="user-lbl" data-error="wrong" data-success="right">First Name: </label>
+                                    </div>
+                                    <div class="md-form">
+                                        <label id="user-lbl" data-error="wrong" data-success="right">Surname:</label>
+                                    </div>
+                                    <div class="md-form">
+                                        <label id="user-lbl" data-error="wrong" data-success="right">Suffix:</label>
+                                    </div>
+                                    <div class="md-form">
+                                        <label id="user-lbl" data-error="wrong" data-success="right">Birthdate:</label>
+                                    </div>
+                                    <div class="modal-footer" style="justify-content:center">
+                                        <button type="submit" class="btn btn-primary" style="background-color: #188045;">Enroll</button>
+                                        <button type="button" style="background-color: red; color: white;" class="btn">Cancel</button>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
-                </form>
-
+                </div>
+                <div class="table-responsive">
+                    <table class="table table-sm" id="preschoolers_table">
+                        <thead>
+                            <tr>
+                                <th scope="col">No</th>
+                                <th scope="col">First Name</th>
+                                <th scope="col">Last Name</th>
+                                <th scope="col">Suffix</th>
+                                <th scope="col">Age</th>
+                                <th scope="col">Birthdate</th>
+                                <th scope="col" class="nosort text-center">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td style="text-align: center;">
+                                    <div>
+                                        <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">View Profile</button></a>
+                                    </div>
+                                </td>
+                            </tr>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-                <div class="col">
-                    <button class="btn float-end" type="button" id= "parentHomeButton"><i class="fa fa-fw fa-bullhorn"></i>Announcements / Updates</button>
-                </div>
-            </div>
-        </div>
-        </div>
         <hr>
         <br>
-        <!-- MAIN CARDS STARTS HERE -->
-        <div class="row">
-            <div class="col-md-6 col-lg-4">
-                <div class="card mb-3 widget-chart text-left">
-                    <div class="icon-wrapper rounded-circle">
-                        <div class="icon-wrapper-bg bg-primary"></div>
-                        <i class="lnr-cog text-primary"></i>
+    <!-- Footer -->
+    <div class="site-footer" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <h2 class="footer-heading mb-4">About</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Modi cumque tenetur inventore veniam, hic vel ipsa necessitatibus 
+                        ducimus architecto fugiat!
+                    </p>
+                    <div class="my-5">
+                        <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                        <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+                        <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                        <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
                     </div>
-                    <div class="widget-chart-content">
-                        <div class="widget-subheading">Total Views</div>
-                        <div class="widget-numbers">45.8k</div>
-                        <div class="widget-description text-success">
-                        <i class="fa fa-angle-up "></i>
-                        <span class="pl-1">175.5%</span></div>
+                </div>
+                <div class="col-lg-8">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <h2 class="footer-heading mb-4">Quick Links</h2>
+                            <ul class="list-unstyled">
+                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4">
+                            <h2 class="footer-heading mb-4">Helpful Link</h2>
+                            <ul class="list-unstyled">
+                            <li><a href="#">Healthcare Professional</a></li>
+                            <li><a href="#">LGU Facilities</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4">
+                            <h2 class="footer-heading mb-4">Resources</h2>
+                            <ul class="list-unstyled">
+                            <li><a href="#">NNC Website</a></li>
+                            <li><a href="#">DOH Website</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <div class="border-top pt-5">
+                        <p class="copyright"><small>
+                        Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
+                        </small>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-<!-- Form-->
-
-<!-- Footer -->
-<div class="site-footer" id="footer" style="background-color: rgb(255, 255, 255);">
-  <div class="container">
-      <div class="row">
-          <div class="col-lg-4">
-              <h2 class="footer-heading mb-4">About</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                  Modi cumque tenetur inventore veniam, hic vel ipsa necessitatibus 
-                  ducimus architecto fugiat!
-              </p>
-              <div class="my-5">
-                  <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-              </div>
-          </div>
-          <div class="col-lg-8">
-              <div class="row">
-                  <div class="col-lg-4">
-                      <h2 class="footer-heading mb-4">Quick Links</h2>
-                      <ul class="list-unstyled">
-                      <li><a href="#">FAQs</a></li>
-                      <li><a href="#">Contact Us</a></li>
-                      </ul>
-                  </div>
-                  <div class="col-lg-4">
-                      <h2 class="footer-heading mb-4">Helpful Link</h2>
-                      <ul class="list-unstyled">
-                      <li><a href="#">Healthcare Professional</a></li>
-                      <li><a href="#">LGU Facilities</a></li>
-                      </ul>
-                  </div>
-                  <div class="col-lg-4">
-                      <h2 class="footer-heading mb-4">Resources</h2>
-                      <ul class="list-unstyled">
-                      <li><a href="#">NNC Website</a></li>
-                      <li><a href="#">DOH Website</a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="row text-center">
-          <div class="col-md-12">
-              <div class="border-top pt-5">
-                  <p class="copyright"><small>
-                  Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
-                  </small>
-                  </p>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
-<script src="{% static '/Javascript/js/functions.js' %}"></script>
-<script src="{% static '/Javascript/js/bootstrap.bundle.min.js' %}"></script>
+    </div>
 </body>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="{% static '/Javascript/testscript.js' %}"></script>
-</html>
+
+    <script src="{% static '/Javascript/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+        
+    <script>
+        var t = $('#preschoolers_table').DataTable({
+            dom: 'Blfrtip',
+            info: 'true',
+            aoColumnDefs: [{
+                'bSortable': false,
+                'aTargets': ['nosort'],
+                'orderable': false,
+                'targets': [0, 6],
+            }],
+            order: [[1, 'asc']],
+            });
+            t.on('order.dt search.dt', function () {
+            let i = 1;
+            t.cells(null, 0, { search: 'applied', order: 'applied' }).every(function (cell) {
+                this.data(i++);
+            });}).draw();
+    </script>
+
+    
