--- a/ppms_project/profilingApp/templates/activities/Unvalidated Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Unvalidated Profile.html
@@ -4,26 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- table layout -->
-    <link rel="stylesheet" href="{% static '/CSS/DataTables/datatables.min.css' %}">
-    <script src="{% static '/Javascript/js/datatables.min.js' %}"></script>
-    <script src="{% static '/Javascript/js/datatables.js' %}"></script>
-    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/x-icon">
+    
     <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
+    <link rel="icon" href="{% static '/Media/logo.svg' %}" type="image/x-icon">
+    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
+    <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/y-icon">
 
-    <script src="{% static '/Javascript/js/Chart.min.js' %}" crossorigin="anonymous"></script>\
-
-    <title>{{ unva_bhw.user.first_name }} {{ unva_bhw.user.last_name }}</title>
-
-        <!-- Header -->
+    <title>City of Dasmariñas</title>
+    <!-- Header -->
     <div class="site-header" id="header">
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled border-bottom" id="header">
             <div class="container-fluid">
@@ -33,12 +23,6 @@
                         <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas</span>
                     </a>
                 </div>
-                <div class="dropdown">
-                    <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px"> <i class="fa fa-fw fa-user"></i>Admin</button>
-                    <ul class="dropdown-menu" id="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
-                    </ul>
-                </div>
             </div>
         </nav>
     </div>
@@ -46,88 +30,24 @@
 
 <body>
     <!-- Dashboard -->
-    <div id="grid" class="container-fluid" style="padding:7%; margin-top:50px;">
-        <div class="container-grid">
-            <div class="">
-                <div class="row justify-content-between"> 
-                    <div class="col-4">
-                    </div>
-                    <div class="col-5">
-                        <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
-                            <ol class="breadcrumb mb-0" style="justify-content:center" >
-                            <li class="breadcrumb-item" ><a href="{% url 'admin_home' %}"style="text-decoration:none; color:#188045"><i class="fa fa-fw fa-home"></i>Home</a></li>
-                            <li class="breadcrumb-item"><a href="{% url 'bhw_validation' %}" style="text-decoration:none;color:#188045"><i class="fa fa-fw fa-user-nurse"></i>BHW Users</a></li>
-                            <li class="breadcrumb-item active" aria-current="page"><i class="fa fa-fw fa-id-card"></i>BHW Profile</li>
-                            </ol>
-                        </nav>
-                    </div>
-                    <hr>
-                </div>
-                <div class="container">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="mb-0">Full Name</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0">{{ unva_bhw.user.first_name }} {{ unva_bhw.user.last_name }}</p>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="mb-0">Email</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0">{{ unva_bhw.user.email }}</p>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="mb-0">Phone</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0">(097) 234-5678</p>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="mb-0">Designated Barangay</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0">{{ unva_bhw.bhw_barangay }}</p>
-                                </div>
-                            </div>
-                            <hr>
+    <div id="grid" class="container-fluid">
+        <div class="container-grid" style="padding: 5%;">
 
-                        <form method="POST">
-                            {% csrf_token %}
-                            
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="mb-0">Validation Status</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    {{ form.is_validated }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <!-- Spacing --> <br><br><br><br>
+            <h4 class="d-flex fas fa-clipboard-check justify-content-center">Validate</h4>
+            <hr style="background-color: white;">
+            <form action="{% url 'unvalidated_profile' bhw.user.id %}" method="POST">
+                {% csrf_token %}
+                <h5 class="modal-title" style="text-align:center;" id="modalLabel">Are you sure you want to validate <strong>{{ bhw.user.first_name }} {{ bhw.user.last_name }}</strong>?</h5><br>
+
+                <div class="d-flex justify-content-center">
+                    <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Validate" style="margin-right: 2%; background-color: rgb(44, 95, 34);">
+                    <a href="{% url 'bhw_validation' %}"><button type="button" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button></a>
                 </div>
-            </div>
+            </form>
         </div>
-        <div class="text-center">
-            <input type="submit" name="save_bhw" style="background-color: #188045; color: white;" class="btn" value="Save">
-            <a href=""><button type="button" style="background-color: #d80202; color: white; margin-left:1%" class="btn">Delete</button></a>
-        </div>
-        </form>
-        <hr>
     </div>
-    
-        
+         
     </div>
     <!-- Footer -->
     <div class="site-footer" id="footer">
