--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -22,42 +22,63 @@
 </head>
 <body>
 <!-- Header -->
-<div class="site-header" id="header">
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled border-bottom" id="header">
-    <div class="container-fluid">
-      <div>
-        <span style="font-size:20px;cursor:pointer; color:#2c5f2dff; margin-left:10px;" id="navButton" onclick="openOffcanvas()"><i class="fa fa-fw fa-bars"></i></span>
-        <a href="#" class="name" style="text-decoration: none;">
-            <img class="navbar-icon" style="margin-left:15px;" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
-            <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas</span>
-        </a>
-      </div>
-      <div class="dropdown">
-        <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px"> <i class="fa fa-fw fa-user"></i>Admin</button>
-        <ul class="dropdown-menu" id="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
-        </ul>
-      </div>
-  </div>
-  </nav>
-</div>
-
-<!-- Side Nav -->
-<div id="mySidenav" class="sidenav">
-  <ul class="list-unstyled ps-0">
-      <div class="buttons">
-          <a id="home" href="{% url 'admin_home' %}"><i class="fa fa-fw fa-home"></i>Home</a>
-          <a href="{% url 'admin_home2' %}"><i class="fa fa-fw fa-id-card"></i>Preschooler Status</a>
-          <a href="{% url 'bhw_validation' %}"><i class="fa fa-fw fa-user-nurse"></i>Validate BHW</a>
-      </div>
-      <br>
-  </ul>
-</div>
-<div id="myCanvasNav" onclick="closeOffcanvas()"></div>
-  
+<header>
+    <div class="site-header">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled border-bottom" 
+    style=" padding-left:5%; padding-right:5%;background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(218, 255, 209));">
+        <div class="flex-fill p-4 py-1 text-dark">
+            <div class="d-flex flex-wrap align-items-center justify-content-between">
+                <div>
+                    <a href="#" class="name" style="text-decoration: none;">
+                        <img class="navbar-icon" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
+                        <span id="hidetitle" class="brand__name" style="color:rgb(3, 3, 3); margin-left:10px;">City of Dasmariñas</span>
+                    </a>
+                </div>
+                <div id="navLinks">
+                    <ul class="nav my-1 text-small">
+                        <li>
+                            <a href="{% url 'admin_home' %}" class="nav-link">
+                            <i class="fa fa-lg fa-fw fa-home d-block bi mx-auto mb-1"></i>
+                            Home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'admin_home2' %}" class="nav-link">
+                            <i class="fa fa-lg fa-fw fa-id-card d-block bi mx-auto mb-1"></i>
+                            Status
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'bhw_validation' %}" class="nav-link">
+                            <i class="fa fa-lg fa-fw fa-user-nurse d-block bi mx-auto mb-1"></i>
+                            Validate
+                            </a>
+                        </li>
+                        <li>
+                            <div class="btn-group my-2" style="margin-left: 20%;">
+                                <a class="button text-decoration-none" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa fa-lg fa-fw fa-user d-block bi mx-auto mb-1 dropdown-toggle"></i>
+                                    Admin
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end " aria-labelledby="dropdownUser1">
+                                    <li><a class="dropdown-item" href="{% url 'admin_home' %}">Home</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'admin_home2' %}">Preschooler Status</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'bhw_validation' %}">Validate BHW</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+    </div>
+</header>
 <!-- Dashboard -->
 {% block dashboard%}
-    <div id="grid" class="container-fluid">
+    <div id="grid" class="container-fluid" style="background-color: rgb(252, 252, 252);">
       <div class="container-grid">
           <h2 style="text-align:left;">Overall Data</h2>
           <hr>
@@ -66,7 +87,7 @@
           <div class="row">
               <div class="col-xl-3 col-md-4">
                   <div class="card text-dark bg-light mb-4">
-                      <div class="card-header"><i class="fas fa-check" style="color: green; position:relative; margin-right:10px;"></i>Number of Validated BHW</div>
+                      <div class="card-header"><i class="fas fa-lg fa-user-check" style="color: green; position:relative; margin-right:10px;"></i>Number of Validated BHW</div>
                       <div class="card-body">
                           <h5 class="card-title">{{ validated_count }}</h5>
                       </div>
@@ -74,7 +95,7 @@
               </div>
               <div class="col-xl-3 col-md-4">
                   <div class="card text-dark bg-light mb-4">
-                      <div class="card-header"><i class="fas fa-spinner" style="color:orange; position:relative; margin-right:10px;"></i>Number of Non-Validated BHW</div>
+                      <div class="card-header"><i class="fas fa-lg fa-user-slash" style="color:orange; position:relative; margin-right:10px;"></i>Number of Non-Validated BHW</div>
                       <div class="card-body">
                           <h5 class="card-title">{{ invalidated_count }}</h5>
                       </div>
@@ -82,7 +103,7 @@
               </div>
               <div class="col-xl-3 col-md-4">
                   <div class="card text-dark bg-light mb-4">
-                      <div class="card-header"><i class="fas fa-user"></i>Number of Parents</div>
+                      <div class="card-header"><i class="fas fa-lg fa-user" style="color: rgb(0, 0, 0); position:relative; margin-right:10px;"></i>Number of Parents</div>
                       <div class="card-body">
                           <h5 class="card-title">{{ parent_count }}</h5>
                       </div>
@@ -90,7 +111,7 @@
               </div>
               <div class="col-xl-3 col-md-4">
                   <div class="card text-dark bg-light mb-4">
-                      <div class="card-header"><i class="fas fa-user-circle"></i>Number of Preschoolers</div>
+                      <div class="card-header"><i class="fas fa-lg fa-baby" style="color: green; position:relative; margin-right:10px;"></i>Number of Preschoolers</div>
                       <div class="card-body">
                           <h5 class="card-title">{{ preschooler_count }}</h5>
                       </div>
@@ -121,55 +142,13 @@
     <!-- Footer -->
 <div class="site-footer" id="footer">
   <div class="container">
-      <div class="row">
-          <div class="col-lg-4">
-              <h2 class="footer-heading mb-4">About</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                  Modi cumque tenetur inventore veniam, hic vel ipsa necessitatibus 
-                  ducimus architecto fugiat!
-              </p>
-              <div class="my-5">
-                  <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-              </div>
-          </div>
-          <div class="col-lg-8">
-              <div class="row">
-                  <div class="col-lg-4">
-                      <h2 class="footer-heading mb-4">Quick Links</h2>
-                      <ul class="list-unstyled">
-                      <li><a href="#">FAQs</a></li>
-                      <li><a href="#">Contact Us</a></li>
-                      </ul>
-                  </div>
-                  <div class="col-lg-4">
-                      <h2 class="footer-heading mb-4">Helpful Link</h2>
-                      <ul class="list-unstyled">
-                      <li><a href="#">Healthcare Professional</a></li>
-                      <li><a href="#">LGU Facilities</a></li>
-                      </ul>
-                  </div>
-                  <div class="col-lg-4">
-                      <h2 class="footer-heading mb-4">Resources</h2>
-                      <ul class="list-unstyled">
-                      <li><a href="#">NNC Website</a></li>
-                      <li><a href="#">DOH Website</a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-      </div>
       <div class="row text-center">
-          <div class="col-md-12">
               <div class="border-top pt-5">
                   <p class="copyright"><small>
                   Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
                   </small>
                   </p>
               </div>
-          </div>
       </div>
   </div>
 </div>
