--- a/ppms_project/profilingApp/templates/activities/Admin Home2.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home2.html
@@ -32,7 +32,7 @@
             
             <div class="row">
                     <div class="col">
-                        <div class="card">
+                    <div class="card shadow-lg bg-white rounded">
                             <div class="card-header">
                                 <h5 class="card-title">Normal</h5>
                             </div>
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card shadow-lg bg-white rounded">
                             <div class="card-header">
                                 <h5 class="card-title">Wasted</h5>
                             </div>
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card shadow-lg bg-white rounded">
                             <div class="card-header">
                                 <h5 class="card-title">Severly Wasted</h5>
                             </div>
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card shadow-lg bg-white rounded">
                             <div class="card-header">
                                 <h5 class="card-title">Overweight</h5>
                             </div>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card shadow-lg bg-white rounded">
                             <div class="card-header">
                                 <h5 class="card-title">Obese</h5>
                             </div>
@@ -84,13 +84,13 @@
             </div>
             <br>
             <div>
-                <div class="card">
+                <div class="card shadow-lg p-3 bg-white rounded">
                     <div class="card-header">
                         Record
                     </div>
 
                     <div class="card-body">
-                        <canvas id="myLine" width="100%" height="50"></canvas>
+                        <canvas id="myBar" width="100%" height="50"></canvas>
                     </div>
                     <div class="card-footer small text-muted">
                         Updated yesterday at 11:59 PM
@@ -105,64 +105,48 @@
     // Set new default font family and font color to mimic Bootstrap's default styling
     Chart.defaults.global.defaultFontFamily = '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
     Chart.defaults.global.defaultFontColor = '#292b2c';
+    
+    
 
     // Pie Chart Example
-    var ctx = document.getElementById("myLine");
-    var myLine = new Chart(ctx, {
-    type: 'line',
+    var ctx = document.getElementById("myBar");
+    var myBar = new Chart(ctx, {
+    type: 'bar',
+    options: {
+        legend: {
+            display: false
+        }
+    },
     data:{
-        labels: ["January", "February", "March", "April","May", "June", "July", "August","September", "October", "November", "December"],
-        datasets: [
-        {
-            label: 'Normal',
-            data: [1, 2, 3, 4, 5, 6, 7,5,2,7,2],
-            fill: false,
-            borderColor: 'rgb(0, 165, 79)',
-            tension: 0.1,
-            borderWidth: 1,
-        },
-        {
-            label: 'Wasted',
-            data: [2, 4, 6, 8, 10, 12, 14,2,5,1,5],
-            fill: false,
-            borderColor: 'rgb(255, 241, 2)',
-            tension: 0.1,
-            borderWidth: 1,
-
-        },
-        {
-            label: 'Severly Wasted',
-            data: [3, 6, 9, 12, 15, 18, 21,12,5,8,8,4],
-            fill: false,
-            borderColor: 'rgb(238, 29, 35)',
-            tension: 0.1,
-            borderWidth: 1,
-
-        },
-        {
-            label: 'Overweight',
-            data: [4, 8, 12, 16, 20, 24, 28,6,3,8,12,2,5],
-            fill: false,
-            borderColor: 'rgb(242, 98, 33)',
-            tension: 0.1,
-            borderWidth: 1,
-        },
-        {label: 'Obese',
-            data: [5, 10, 15, 20, 25, 30, 35,12,16,23,7],
-            fill: false,
-            borderColor: 'rgb(0,0,0)',
-            tension: 0.1,
-            borderWidth: 1,
-        }]
-        },
+        labels: ["Normal", "Wasted", "Severly Wasted","Overweight","Obese"],
+        datasets: [{
+                label: 'Normal',
+                data: [65, 59, 80, 81, 56, 55, 40],
+                backgroundColor: [
+                'rgb(0, 165, 79)',
+                'rgb(255, 241, 2)',
+                'rgb(238, 29, 35)',
+                'rgb(242, 98, 33)',
+                'rgb(0,0,0, 0.2)',
+                ],
+                borderColor: [
+                'rgb(0, 165, 79)',
+                'rgb(255, 241, 2)',
+                'rgb(238, 29, 35)',
+                'rgb(242, 98, 33)',
+                'rgb(0,0,0,)',,
+                ],
+                borderWidth: 1
+            }
+            ]},
     Option: {
         responsive: true,
         maintainAspectRatio: false,
         scales: {
-            x: {
+            y: {
                 beginAtZero: true
              }   
-            }
+            },
         },
     });
 
